--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buddy</title>
 
+    <link rel="shortcut icon" href="assets/image/Icon_1.ico" type="image/x-icon">
 
 
     <!--Jquery  -->
@@ -71,6 +72,7 @@
 
 
     <script src="main.js"></script>
+    <script src="/eel.js"></script>
 </body>
 
 </html>
