--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,9 @@
     <!-- Bootsrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        
+    <!-- Bootsrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
 
     <!-- Particle js -->
@@ -47,7 +50,7 @@
             </div>
 
             <!-- Heading inside the container -->
-             
+
             <h5 class="text-light text text-center">Ask me anything</h5>
 
         </div>
